# session-controller

./: .gitignore  README.md  events.py  launchpad.py  pyproject.toml  session-controller.desktop  session-controller.py
plugins/: autojack.py  launchpad.py
sessionlib/: __init__.py  cli.py  controller.py  events.py  main.py  plugin.py
sessionlib/core/: alsaseq.py  jack.py  udev.py
