[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sessionlib"
authors = [{name = "Bruce Schultz", email = "brulzki@gmail.com"}]
license = {text = "0BSD"}
readme = "README.md"
version = "0.0.1"
description = "A session daemon for jack-based audio studio"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Private :: Do Not Upload",
]
requires-python = ">=3.9"
dependencies = [
    "dbus-python",
    "pluginbase",
    "pyalsa",
    "pygobject",
    "pyudev",
    "pyxdg",
]

[project.urls]
Homepage = "https://github.com/brulzki/session-controller"

[project.scripts]
session-controller = "sessionlib.cli:main"
